--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,8 @@
         "global",
         "script",
         "defines",
-        "data"
+        "data",
+        "remote"
     ],
     "factorio.versions": [
         {
